# procly

./: .bazelrc  .clang-tidy  .gitattributes  .gitignore  BUILD  MODULE.aspect  MODULE.bazel  README.bazel.md  README.md  REPO.bazel
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-bazel-ci/: action.yml
.github/workflows/: ci.yml
docs/: BUILD  README.md
docs/doxygen/: BUILD  custom.css  header.html  vars.bzl
examples/: BUILD  README.md  command_cwd.cc  command_env.cc  command_output.cc  command_status.cc  merge_stderr.cc  pipeline_output.cc  pipeline_pipefail.cc  pipeline_pipes.cc  stdio_append.cc  stdio_files.cc  stdio_null.cc  stdio_pipes.cc  try_wait.cc  wait_timeout.cc
include/procly/: child.hpp  command.hpp  pipe.hpp  pipeline.hpp  platform.hpp  result.hpp  status.hpp  stdio.hpp  unix.hpp  windows.hpp
include/procly/internal/: access.hpp  backend.hpp  clock.hpp  concurrent_use_guard.hpp  expected.hpp  fd.hpp  io_drain.hpp  lowering.hpp  posix_spawn.hpp  wait_policy.hpp
src/: child.cc  command.cc  pipe.cc  pipeline.cc  result.cc  status.cc  unix.cc
src/internal/: clock.cc  io_drain.cc  lowering.cc  posix_backend.cc  posix_spawn.cc  wait_policy.cc
tests/helpers/: BUILD  procly_child.cc  runfiles_support.hpp
tests/integration/: BUILD  command_integration_test.cc  concurrency_smoke_test.cc
tests/stress/: BUILD  command_stress_test.cc
tests/unit/: BUILD  backend_injection_test.cc  concurrent_use_contract_test.cc  cxx17_smoke_test.cc  io_drain_test.cc  lowering_test.cc  pipe_test.cc  posix_spawn_test.cc  result_test.cc  result_throw_test.cc  status_test.cc  stdio_test.cc  timeout_policy_test.cc  unix_test.cc
tools/: BUILD  tools.lock.json
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
tools/patches/: BUILD  googletest_bazel8.patch
tools/sanitizers/: BUILD.bazel  darwin_san_run_under.sh  darwin_sanitizer_run_under.sh  linux_sanitizer_run_under.sh  sanitizer_runfiles_resolve.sh  sanitizer_runfiles_resolve_test.sh
